<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Crypto</string>
    <string name="formatted_string_percentage">%.2f\%%</string>
    <string name="formatted_string_with_currency">$ %.2f</string>
    <string name="formatted_update_period">• Updated %1$s</string>
    <string name="formatted_duration_period" tools:ignore="PluralsCandidate">%1$d days</string> <!--only showing days so wont be grammar problem-->
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="advanced">Advanced</string>
    <string name="basic">Basic</string>
    <string name="all_time_high">$19,891.00</string>
    <string name="arrow_indicating_percentage_of_last_7_days">Arrow indicating percentage of last 7 days</string>
    <string name="to_the_moon">To the moon!</string>
    <string name="bitcoin_price">Bitcoin price</string>
    <string name="loading">Loading...</string>


</resources>
